Fixed buttons
Text was overlapping buttons on mobile view, adjusted that

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2546,7 +2546,7 @@ input, select, textarea {
 					ul.actions:not(.fixed) li input[type="button"],
 					ul.actions:not(.fixed) li button,
 					ul.actions:not(.fixed) li .button {
-						width: 40%;
+						width: 63%;
 					}
 
 						ul.actions:not(.fixed) li input[type="submit"].icon:before,
@@ -3636,7 +3636,7 @@ input, select, textarea {
 		}
 	
 		#profile {
-			width: 40%;
+			width: 30%;
 			float: none;
 			justify-content: center;
 		}
@@ -3659,7 +3659,7 @@ input, select, textarea {
 		}
 	
 		#profile {
-			width: 60%;
+			width: 40%;
 			float: none;
 			justify-content: center;
 		}
@@ -3670,6 +3670,14 @@ input, select, textarea {
 			justify-content: center;
 		}
 
+	}
+
+	@media screen and (max-width: 900px) {
+		#profile {
+			width: 60%;
+			float: none;
+			justify-content: center;
+		}
 	}
 
 	@media screen and (max-width: 500px) {
